commit of Trealth

--- a/medbooker_project/templates/base.html
+++ b/medbooker_project/templates/base.html
@@ -87,7 +87,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <h5>MedBooker</h5>
+                    <h5>Trealth</h5>
                     <div style="width: 70%;">
                         <p>Book medical appointments online with verified healthcare professionals.</p>
                     </div>
