--- a/medbooker_project/templates/core/home.html
+++ b/medbooker_project/templates/core/home.html
@@ -9,7 +9,9 @@
             <div class="container-fluid py-5">
                 <h1 class="display-5 fw-bold">Medical Appointment System</h1>
                 <p class="col-md-8 fs-4">A comprehensive platform for managing doctor appointments, medical records, and healthcare services.</p>
+                {% if user.is_authenticated and user.user_type == 'patient' %}
                 <a href="{% url 'core:find_doctor' %}" class="btn btn-primary btn-lg">Find a Doctor</a>
+                {% endif %}
                 {% if not user.is_authenticated %}
                 <a href="{% url 'accounts:signup' %}" class="btn btn-outline-primary btn-lg ms-2">Sign Up</a>
                 {% endif %}
