commit of Trealth

--- a/medbooker_project/templates/base.html
+++ b/medbooker_project/templates/base.html
@@ -32,7 +32,7 @@
 </head>
 <body>
     <!-- Header -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary  shadow-sm">
         <div class="container">
             <a class="navbar-brand" href="{% url 'core:home' %}">Trealth</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
